# tiny_compile

./: .gitignore  CMakeLists.txt  README.MD  TINY+ 文法.doc
src/: CMakeLists.txt  Main.cpp
src/core/: Helper.cpp  Log.cpp  Log.h  MidCode.cpp  MidCode.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.h  TokenStream.h  TreeNode.h
src/view/: BuildWindow.cpp  BuildWindow.h  MainWindow.cpp  MainWindow.h
src/view/component/: highlighter.cpp
tests/: CMakeLists.txt  MainTest.cpp  common.h
